[gd_scene load_steps=3 format=1]

[ext_resource path="res://scripts/mainmenu.gd" type="Script" id=1]
[ext_resource path="res://sprites/white.png" type="Texture" id=2]

[node name="mainmenu" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="bg" type="TextureFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 2 )
modulate = Color( 0.261719, 0.261719, 0.261719, 1 )
expand = true
stretch_mode = 0

[node name="lnIP" type="LineEdit" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 190.0
margin/top = 80.0
margin/right = 0.0
margin/bottom = 50.0
text = "127.0.0.1"
placeholder/text = "IPv4 Address"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="lnPort" type="LineEdit" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -10.0
margin/top = 80.0
margin/right = -200.0
margin/bottom = 50.0
text = "6969"
placeholder/text = "Port"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="lnMaxPlayers" type="LineEdit" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 190.0
margin/top = 40.0
margin/right = 0.0
margin/bottom = 10.0
text = "32"
placeholder/text = "Max Players"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="lnName" type="LineEdit" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -10.0
margin/top = 40.0
margin/right = -200.0
margin/bottom = 10.0
text = "WibuLokal"
placeholder/text = "Port"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="chkDedicated" type="CheckBox" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 188.0
margin/top = 0.0
margin/right = 97.0
margin/bottom = -23.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Dedicated"
flat = false
align = 0

[node name="lblMsg" type="Label" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 192.0
margin/top = -30.0
margin/right = -198.0
margin/bottom = -44.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btnHost" type="Button" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 190.0
margin/top = -60.0
margin/right = 0.0
margin/bottom = -110.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Host"
flat = false

[node name="btnConnect" type="Button" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -10.0
margin/top = -60.0
margin/right = -200.0
margin/bottom = -110.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Connect"
flat = false


